<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Reminiscence</string>
    <string name="please">Please</string>
    <string name="wait">wait...</string>
    <string name="connection_fail">You must be connected to the internet</string>
    <string name="dropdown_public_stories">Public Stories</string>
    <string name="dropdown_private_stories">Your stories</string>

    <!-- SlidingMenu -->
    <string name="menu_profile">ACCOUNT</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_profile_image">Profile Image</string>
    <string name="menu_add_friend">Add Friend</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_language">Change Language</string>
    <string name="menu_logout">Logout</string>
    <string name="action_language_italian">Italian</string>
    <string name="action_language_english">English</string>
    <string name="action_addStory">Add a story</string>

    <!-- Login_Activity -->
    <string name="login_activity_title">Sign in</string>
    <string name="login_username_hint">User e-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_label">Sign in</string>
    <string name="login_registration_button_label">Sign up</string>
    <string name="login_empty_username">Insert your e-mail.</string>
    <string name="login_empty_password">Insert your password.</string>
    <string name="login_empty_both">Insert your e-mail and password.</string>
    <string name="login_failed">Wrong Email or Password. Try again!</string>
    <string name="login_succes">Now you are logged in</string>

    <!-- Logout Popup -->
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_failed">Logout failed</string>
    <string name="logout_success">Logout successed</string>

    <!-- Registration_Activity -->
    <string name="title_activity_registration">Sign up</string>
    <string name="registration_activity_header">Sign up now and share your life stories.</string>
    <string name="back_button_label">BACK</string>
    <string name="next_button_label">NEXT</string>
    <string name="confirm_button_label">CONFIRM</string>
    <string name="user_surname_label">Surname</string>
    <string name="user_name_label">Name</string>
    <string name="user_mail_label">E-Mail</string>
    <string name="registration_surname_empty">Surname can\'t be blank</string>
    <string name="registration_surname_contains_spaces">Surname can\'t start or end with spaces</string>
    <string name="registration_surname_invalid">Surname can\'t contain number or special characters</string>
    <string name="registration_name_empty">Name can\'t be blank</string>
    <string name="registration_name_contains_spaces">Name can\'t start or end with spaces</string>
    <string name="registration_name_invalid">Name can\'t contain number or special characters</string>
    <string name="registration_email_empty">Email can\'t be blank</string>

    <!-- DataNascita_Activity -->
    <string name="data_nascita_activity_title">Date of birth</string>
    <string name="data_nascita_activity_header">Insert your date of birth.</string>

    <!-- RegistrationPassword_Activity -->
    <string name="registration_password_suggest_label">Now you need a password.\nYou can use this one or change it</string>
    <string name="registration_password_hint">Name + number</string>
    <string name="registration_password_empty">Password can\'t be blank.</string>
    <string name="registration_password_contains_spaces">Password can\'t contains spaces.</string>
    <string name="registration_password_wrong">Password must have only letters and numbers.</string>
    <string name="registration_failed">No! Something goes wrong!</string>
    <string name="registration_succes">Uhuh! You are now signed up!</string>

    <!-- ViewStoriesFragmentActivity -->
    <string name="story_title_placeholder">Title</string>
    <string name="story_description_placeholder">Description</string>
    <string name="dummy_story_title">DummyTitle</string>
    <string name="dummy_story_desc">Lorem ipsum dolor sit amet, 
        consectetur adipiscing elit. Curabitur nisi ante, dignissim sit amet 
        posuere vitae, ullamcorper interdum felis. Vestibulum ante ipsum primis 
        in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
         urna augue, iaculis ac ultrices et, varius eu libero. Sed aliquet, 
         nunc non porttitor suscipit, massa urna elementum risus, non convallis 
         magna risus at leo. Cras elementum, purus eget ornare imperdiet, 
         sem sapien luctus lectus, sed suscipit ante velit sit amet mi. 
         Ut at nibh quam, eget ullamcorper orci. Duis faucibus elementum 
         lacinia. Etiam et commodo felis. Vestibulum posuere nibh pretium 
         metus dapibus eget blandit est lobortis. Maecenas lacinia mi in sem 
         vulputate feugiat. Fusce porta lacus vitae libero volutpat imperdiet. 
         Phasellus tortor ante, ornare id accumsan dignissim, fermentum quis 
         nunc. Praesent ultrices sem at enim eleifend interdum. 
         Vivamus et turpis ipsum, quis tristique orci. Vestibulum egestas 
         felis at justo aliquet sollicitudin.</string>
    <string name="empty_year">What happened to you in this year?\n Write a new Story! =)</string>
    <string name="deleteStoryPopupMessage1">Are you sure you want to remove</string>
    <string name="deleteStoryPopupMessage2">from your stories?</string>
    <string name="deleteStorySucces">Story removed</string>
    <string name="deleteStoryFail">Story removed (Failed)</string>
    <string name="no_stories">There aren\'t public stories available for this decade</string>

    <!-- EmptyStoryActivity -->
    <string name="no_story">Tell us a story about</string>
    <string name="year_hint">Year</string>
    <string name="story_add_ok">Story added successfully</string>
    <string name="story_year_broken">year invalid</string>
    <string name="story_add_fail">Some errors occurred</string>
    <string name="story_notification_upload_title">Uploading image (%1$s / %2$s)</string>
    <string name="story_upload_photo">Add photos</string>

    <!-- MainPageActivity -->
    <string name="title_activity_main_page">MainPageActivity</string>

    <!-- ChangePasswordActivity -->
    <string name="title_activity_change_password">Change Password</string>
    <string name="change_password_suggest_label">Change your password</string>
    <string name="change_password_hint">New password</string>
    <string name="change_password_confirm_hint">Confirm password</string>
    <string name="empty_password">Insert password and confirm it.</string>
    <string name="wrong_password">Passwords don\'t match.</string>
    <string name="correct_password">Your password has been changed!</string>

    <!-- LuogoNascita Activity -->
    <string name="label_luogo_nascita">Where you were born?</string>
    <string name="hint_luogo_nascita">Your birth place</string>
    <string name="birthplace_empty">Birthplace can\'t be black</string>
    <string name="birthplace_contains_spaces">Birthplace can\'t start or end with spaces</string>

    <!-- ProfileImage Activity -->
    <string name="title_activity_profile_fragment">ProfileFragment</string>

    <!-- ChangeProfileImage Activity -->
    <string name="label_change_profile_image">Change your profile image</string>
    <string name="profile_image_change_button">Choose an image</string>
    <string name="profile_image_change_success">Your profile image has been changed!</string>
    <string name="profile_image_change_failed">Error: profile image cannot be change! try later.</string>
    <string name="profile_image_no_data">There is no profile image</string>

    <!-- Born Fragment -->
    <string name="born">Born in %1$s</string>
    <string name="born_title">Born</string>

    <!-- Story Fragment -->
    <string name="chiedi_aiuto_btn">Request help</string>
    
    <!-- AddFriendActivity -->
	<string name="title_activity_add_friend">Add a friend</string>
	<string name="add_friend_successful">Your friend was successfully added!</string>
	<string name="no_friends_a">No </string>
    <string name="no_friends_b">friends</string>
    
    <!-- FriendListActivity -->
    <string name="title_activity_friend_list">FriendListActivity</string>
    <string name="deleteFriendPopupMessage1">Are you sure you want to remove</string>
    <string name="deleteFriendPopupMessage2">from friends?</string>
    <string name="fli_removefriend">Remove Friend</string>
    
    <!-- CheckBoxActivity -->
    <string name="send_mail">Send mail</string>
    <string name="add_friend_checkinputs">Check your inputs</string>

</resources>