<menu xmlns:android="http://schemas.android.com/apk/res/android" >
        
    
        <item
        android:id="@+id/action_languages"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_settings"
        android:icon="@drawable/it" >
        
          	 <menu>
		        <item
		        android:id="@+id/action_language_it"
		        android:orderInCategory="100"
		        android:showAsAction="ifRoom"
		        android:title="@string/action_language_italian"
		        android:icon="@drawable/it" />
		        
		        <item
		        android:id="@+id/action_language_en"
		        android:orderInCategory="100"
		        android:showAsAction="ifRoom"
		        android:title="@string/action_language_english"
		        android:icon="@drawable/en" />
			</menu>
       </item>
</menu>