<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_red"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddFriendActivity" >

    <TextView
        android:id="@+id/add_friend_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/menu_add_friend"
        android:textColor="@color/white"
        android:textSize="@dimen/default_textSize_huge" />

    <EditText
        android:id="@+id/add_friend_name_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_friend_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin_double"
        android:background="@drawable/txt_input_bordered"
        android:ems="10"
        android:hint="@string/user_name_label"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/default_textSize_larger" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/add_friend_surname_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_friend_name_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin_double"
        android:background="@drawable/txt_input_bordered"
        android:ems="10"
        android:hint="@string/user_surname_label"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/default_textSize_larger" />

    <EditText
        android:id="@+id/add_friend_mail_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_friend_surname_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin_double"
        android:background="@drawable/txt_input_bordered"
        android:ems="10"
        android:hint="@string/user_mail_label"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/default_textSize_larger" />

    <Button
        android:id="@+id/add_friend_back_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_friend_confirm_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/default_margin_double"
        android:background="@drawable/btn_default_selector"
        android:text="@string/back_button_label"
        android:textSize="@dimen/default_textSize_larger"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/add_friend_confirm_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_friend_back_button"
        android:layout_alignLeft="@+id/add_friend_mail_et"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@drawable/btn_default_selector"
        android:text="@string/confirm_button_label" 
        android:textSize="@dimen/default_textSize_larger"
        android:textColor="@color/white" />

</RelativeLayout>