<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/red_background_light"
    android:gravity="center"
    android:orientation="vertical" >
    	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="@dimen/default_margin"
            android:text="@string/user_name_label"
            android:textSize="@dimen/default_textSize_small" />

        <TextView
            android:id="@+id/item_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_surname_label"
            android:textSize="@dimen/default_textSize_small" />
    </LinearLayout>
    
        <TextView
        android:id="@+id/item_mail_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/default_textSize_small"
        android:text="@string/login_username_hint" />

</LinearLayout>