<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_red"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChangePassword" >
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >
	
	    <TextView
	        android:id="@+id/change_password_header"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:gravity="center_horizontal"
	        android:text="@string/change_password_suggest_label"
	        android:textColor="@color/white"
	        android:textSize="@dimen/default_textSize_huge"
	        android:shadowColor="#000000"
	        android:shadowDx="3"
	        android:shadowDy="3"
	        android:shadowRadius="5" />
	
	    <EditText
	        android:id="@+id/txtNewPassword"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/change_password_header"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="30dp"
	        android:background="@drawable/txt_input_bordered"
	        android:ems="10"
	        android:hint="@string/change_password_hint"
	        android:inputType="textVisiblePassword"
	        android:selectAllOnFocus="true"
	        android:textSize="@dimen/default_textSize_larger" />
	
	    <EditText
	        android:id="@+id/txtConfirmPassword"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/txtNewPassword"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="30dp"
	        android:background="@drawable/txt_input_bordered"
	        android:ems="10"
	        android:hint="@string/change_password_confirm_hint"
	        android:inputType="textVisiblePassword"
	        android:selectAllOnFocus="true"
	        android:textSize="@dimen/default_textSize_larger" >
	        <requestFocus />
	    </EditText>
	
	    <Button
	        android:id="@+id/btnChangePassword"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/txtConfirmPassword"
	        android:layout_marginTop="30dp"
	        android:background="@drawable/btn_default_selector"
	        android:text="@string/confirm_button_label"
	        android:textSize="@dimen/default_textSize_larger"
	        android:textColor="@color/white" />
	    
	      <Button
	        android:id="@+id/btnChangePasswordBack"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/btnChangePassword"
	        android:layout_marginTop="30dp"
	        android:background="@drawable/btn_default_selector"
	        android:text="@string/back_button_label"
	        android:textSize="@dimen/default_textSize_larger"
	        android:textColor="@color/white" />
      
      </RelativeLayout>

</RelativeLayout>