<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/emptystory_nostory_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/no_story"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/emptystory_title_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emptystory_nostory_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:ems="10"
        android:hint="@string/story_title_placeholder" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/emptystory_desc_et"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/emptystory_add_btn"
        android:layout_below="@+id/emptystory_title_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/story_description_placeholder"
        android:inputType="textMultiLine"
        android:padding="10dp" />

    <Button
        android:id="@+id/emptystory_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_input_add"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>