<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/row_checkbox"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="left"
    android:orientation="horizontal"
    android:padding="4dp" >
    
    <LinearLayout 
    android:paddingLeft="10dp"
    android:layout_weight="0.9"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" >
    	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:text="@string/user_name_label"
            android:textSize="@dimen/default_textSize_small" />

        <TextView
            android:id="@+id/item_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_surname_label"
            android:textSize="@dimen/default_textSize_small" />
    </LinearLayout>
    
        <TextView
        android:id="@+id/item_mail_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_textSize_small"
        android:gravity="left"
        android:text="@string/login_username_hint" />

	</LinearLayout>
	
           <CheckBox
            android:id="@+id/check_friend"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="0.1"
   			android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent" />
    
</LinearLayout>