<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background_red"
    tools:context=".ProfileFragment" >

    <ImageView
        android:id="@+id/profile_image"
        android:contentDescription="@string/menu_profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:src="@drawable/default_profile_image" />

    <TextView
        android:id="@+id/profile_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:textSize="@dimen/default_textSize_large"
        android:layout_alignLeft="@+id/profile_image"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/user_name_label" />

    <TextView
        android:id="@+id/profile_surname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/profile_image"
		android:gravity="center"
		android:textSize="@dimen/default_textSize_large"
        android:layout_below="@+id/profile_name_textview"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/user_surname_label" />

</RelativeLayout>