<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_red"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChangePassword" >
    
    <RelativeLayout
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >
	
	    <TextView
	        android:id="@+id/luogonascita_header"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:gravity="center_horizontal"
	        android:text="@string/label_luogo_nascita"
	        android:textColor="@color/white"
	        android:textSize="@dimen/defaul_textSize_huge"
	        android:shadowColor="#000000"
	        android:shadowDx="3"
	        android:shadowDy="3"
	        android:shadowRadius="5" />
	
	    <AutoCompleteTextView
	        android:id="@+id/txtLuogoNascita"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/luogonascita_header"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="30dp"
	        android:background="@drawable/txt_input_bordered"
	        android:ems="10"
	        android:hint="@string/hint_luogo_nascita"	        
	        android:textColor="@color/black" 
	        android:inputType="textVisiblePassword"
	        android:selectAllOnFocus="true"
	        android:textSize="60sp" />
	
	    <Button
	        android:id="@+id/btnLuogoNascita"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/txtLuogoNascita"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="30dp"
	        android:background="@drawable/btn_default_selector"
	        android:text="@string/confirm_button_label"
	        android:textColor="@color/white"
	        android:textSize="60sp" />
      
      </RelativeLayout>

</RelativeLayout>