<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="bottom" >
    
    	<RelativeLayout
	    android:id="@+id/panelButtonStory"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp"
	    android:layout_alignParentBottom="true">

	    <Button
	        android:id="@+id/btn_upload_photo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="36dp"
	        android:textColor="@color/white"
	        android:layout_centerVertical="true"
	        android:background="@drawable/btn_default_selector"
	        android:text="@string/story_upload_photo" />

	    <Button
	        android:id="@+id/btn_aiuto_amico"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:layout_marginRight="45dp"
	        android:textColor="@color/white"
	        android:background="@drawable/btn_default_selector"
	        android:text="@string/chiedi_aiuto_btn" />
	    
	</RelativeLayout>
	
	<ScrollView
	    android:id="@+id/scrollStory"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_above="@id/panelButtonStory"
	    android:layout_alignParentTop="true"
	    android:layout_gravity="top" >
	
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        
	       	<android.support.v4.view.ViewPager
				android:id="@+id/view_pager"
				android:layout_width="300dp"
	            android:layout_height="300dp"
	            android:maxHeight="400dp"
	            android:adjustViewBounds="true"
				android:scaleType="fitCenter"
				android:visibility="visible" />
	
	        <TextView
	            android:id="@+id/story_description_tv"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="20dp"
	            android:layout_below="@+id/photo"
	            android:layout_centerHorizontal="true"
	            android:gravity="center"
	            android:padding="10dp"
	            android:singleLine="false"
	            android:text="@string/story_description_placeholder"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	    </RelativeLayout>
	    
	</ScrollView>

</RelativeLayout>